# TitleCardMaker

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .ruff.toml  .smbdeleteAAA90600008000237c  404.html  CNAME  Dockerfile  Dockerfile-alpine  Dockerfile.armv7  LICENSE  Pipfile  README.md  alembic.ini  cypress.config.js  fixer.py  index.html  install_python.sh  main.py  mini_maker.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  sitemap.xml  start.sh  test.py  timing.py
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  help.yml
.github/workflows/: cypress.yml  discord_build.yml  discord_release.yml  docker_build.yml  docker_build_armv7.yml  docker_develop.yml  docker_master.yaml  docs.yml  sponsors.yml
app/: dependencies.py  main.py
app/alembic/: env.py  script.py.mako
app/database/: query.py  session.py
app/internal/: auth.py  availability.py  backup.py  blueprint.py  cards.py  connection.py  episodes.py  font.py  imports.py  logs.py  series.py  settings.py  snapshot.py  sources.py  statistic.py  sync.py  templates.py  translate.py  webhooks.py
app/models/: blueprint.py  card.py  connection.py  episode.py  font.py  loaded.py  preferences.py  series.py  snapshot.py  statistic.py  sync.py  template.py  user.py
app/routers/: api.py  auth.py  availability.py  backups.py  blueprint.py  cards.py  connection.py  episodes.py  fonts.py  imports.py  logs.py  missing.py  proxy.py  schedule.py  series.py  settings.py  sources.py  statistics.py  sync.py  templates.py  translate.py  webhooks.py
app/schemas/: auth.py  availability.py  base.py  blueprint.py  card.py  card_type.py  connection.py  episode.py  font.py  ids.py  imports.py  logs.py  preferences.py  schedule.py  series.py  sonarr.py  statistic.py  sync.py  title_card.py  webhooks.py
app/templates/: addSeries.html  addSeries.js  base.html  cardTemplates.html  changelog.html  connections.html  docs_scalar.html  fonts.html  graphs.html  header.html  helper.js  home.css  home.html  home_sidebar.html  html_boilerplate.html  import.html  import.js  loadCardTypes.js  loadStaticContent.js  login.html  logs.html  messages.js  missing.html  scheduler.html  scheduler.js  series.html  series_alt.html  settings.html  settings_sidebar.html  sidebar.html  style.css  sync.html  system.html  system_sidebar.html  theme.js
backend/: main.py  mini_maker.py  pyproject.toml
backend/modules/: AspectRatioFixer.py  BaseSummary.py  CollectionPosterMaker.py  DataFileInterface.py  EpisodeDataSource2.py  EpisodeInfo2.py  EpisodeMap.py  Font.py  GenreMaker.py  InterfaceGroup.py  MediaServer.py  MediaServer2.py  MoviePosterMaker.py  PersistentDatabase.py  PlexInterface.py  Profile.py  RemoteCardType2.py  RemoteFile.py  SeriesInfo.py  ShowRecordKeeper.py  SonarrInterface.py  StandardSummary.py  StyleSet.py  Template.py  TemporaryZip.py  TieredSettings.py  Title.py  YamlReader.py
blueprints/: index.html
card_types/: index.html
card_types/anime/: index.html
card_types/local/: index.html
card_types/music/: index.html
card_types/negative_space/: index.html
card_types/notification/: index.html
card_types/shape/: index.html
card_types/striped/: index.html
config/: DataFileInterface.py  DatabaseInterface.py  Debug.py  Episode.py  ImageMagickInterface.py  Pipfile  PlexInterface.py  Profile.py  Show.py  ShowArchive.py  ShowSummary.py  SonarrInterface.py  TitleCard.py  TitleCardMaintainer.py  TitleCardMaker.py  TitleCardManager.py  TitleCardProfile.py  TitleCardType.py  fixer.py  main.py  preferences.py
cypress/e2e/: auth.cy.js  navigation.cy.js  scheduler.cy.js  spec.cy.js  templates.cy.js
cypress/support/: commands.js  e2e.js
development/api/: index.html
development/contributing/: index.html
docker/imagick/: APKBUILD  Dockerfile
docs/: api.md  blueprints.md  help_and_support.md  index.md  release_notes.md  requirements.txt  settings.md
docs/card_types/: anime.md  index.md  local.md  music.md  negative_space.md  notification.md  shape.md  striped.md
docs/connections/: index.md
docs/development/: api.md  contributing.md
docs/getting_started/: add_series.md  connections.md  creating_cards.md  creating_template.md  creating_templates.md  custom_font.md  import_settings.md  index.md  local.md  scheduler.md  settings.md  terminology.md
docs/includes/: abbreviations.md
docs/javascripts/: card_types.js  fonts.js  home.js  imageCompare.js
docs/overrides/: 404.html
docs/stylesheets/: extra.css
docs/user_guide/: connections.md  faq.md  fonts.md  home.md  index.md  integrations.md  logs.md  mask_images.md  new_series.md  scheduler.md  series.md  setting_priority.md  settings.md  syncs.md  system.md  (+2 more)
front/: package-lock.json  package.json  tailwind.config.js
frontend/: bun.lockb  next.config.cjs  package-lock.json  package.json  tailwind.config.js
getting_started/: index.html
help_and_support/: index.html
javascripts/: home.js
modules/: AnimeCard.py  AnimeTitleCard.py  AspectRatioFixer.py  BackgroundTasks.py  BaseCardType.py  BaseSummary.py  CardType.py  CleanPath.py  CollectionPosterMaker.py  CutoutTitleCard.py  DataFileInterface.py  DatabaseInfoContainer.py  DatabaseInterface.py  Debug.py  Debug2.py  EmbyInterface.py  EmbyInterface2.py  Episode.py  EpisodeDataSource.py  EpisodeDataSource2.py  EpisodeInfo.py  EpisodeInfo2.py  EpisodeMap.py  FadeTitleCard.py  Font.py  FontValidator.py  FontValidator2.py  FormatString.py  FrameTitleCard.py  GenreMaker.py  GundamTitleCard.py  ImageMagickInterface.py  ImageMaker.py  Interface.py  InterfaceGroup.py  JellyfinInterface.py  JellyfinInterface2.py  LandscapeTitleCard.py  LogoTitleCard.py  Manager.py  (+53 more)
overrides/: 404.html
search/: search_index.json
stylesheets/: extra.css
user_guide/: index.html
v1/: index.html
yml/: _exclusions.yml  anime.yml  archive_only.yml  attenborough.yml  plex_sync_anime.yaml  requests.yaml  scooby_doo.yml  sonarr_anime.yml  sonarr_archive.yml  sonarr_tv.yml  test.yaml  tv.yml  uncensored_anime.yaml
(+296 files in other folders)
