[tool.poetry]
name = "titlecardmaker"
version = "2.9.1"
description = "An automated title card creation program for Plex, Emby, and Jellyfin"
authors = ["Collin Heist"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
regex = "==2023.10.3"
num2words = "==0.5.12"
pyyaml = "==6.0.1"
requests = "==2.31.0"
titlecase = "==2.4.1"
tqdm = "==4.66.1"
fonttools = "==4.43.0"
plexapi = "==4.15.4"
tenacity = "==8.2.3"
tinydb = "==4.8.0"
schedule = "==1.2.1"
tmdbapis = "==1.2.6"
"ruamel.yaml" = "==0.17.21"
uvicorn = "==0.22.0"
fastapi = "==0.99.1"
sqlalchemy = "==2.0.17"
python-multipart = "==0.0.6"
jinja2 = "==3.1.2"
pydantic = "==1.10.17"
apscheduler = "==3.10.1"
imagesize = "==1.4.1"
alembic = "==1.11.1"
tzdata = "==2023.3"
fastapi-pagination = "==0.12.5"
python-jose = {version = "==3.3.0", extras = ["cryptography"]}
bcrypt = "==4.1.2"
passlib = {version = "==1.7.4", extras = ["bcrypt"]}
pillow = "==10.2.0"
thefuzz = "==0.20.0"
charset-normalizer = "==3.3.2"
loguru = "==0.7.2"
better-exceptions = "==0.2.1"
colorama = "==0.4.6"
win32-setctime = "==1.1.0"
websockets = "^12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
exclude = [
    "config/assets",
    "config/cards",
    "config/source"
]
